# fastapi-multibot-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROMPT.md  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
app/api/v1/: __init__.py  auth.py  bots.py  items.py  scraper.py  users.py  webhooks.py
app/api/v1/bot/: actions.py
app/core/: __init__.py  celery_app.py  config.py  security.py
app/db/: session.py
app/middleware/: __init__.py  api_key.py
app/models/: __init__.py  all_models.py
app/schemas/: __init__.py
app/services/: __init__.py  bot_manager.py  command_handler.py  database.py  scraper.py  telegram.py
app/services/captcha/: captcha.py
app/services/receipts/: receipt_generator.py
app/services/scrapers/: base.py  cashfrenzy777.py  cashmachine777.py  egame99.py  factory.py  firekirin.py  gameroom777.py  gamevault999.py  juwa2.py  juwa777.py  lasvegassweeps.py  milkyway.py  moolah.py  mrallinone777.py  orionstars.py  pandamaster.py  ultrapanda.py  vblink777.py  vegasroll.py  vegasx.py
app/worker/: tasks.py
config/: bots.example.json
docs/: architecture_improvements.md  docker-commands.md
scripts/: generate_api_key.py
tests/: test_api.py
